Fix some CSS alignment issues. Added Sequel website to the about sequel slide.

--- a/s5-ui/pretty.css
+++ b/s5-ui/pretty.css
@@ -45,6 +45,7 @@ div.long {font-size: 0.75em;}
 .slide {
 	font-family: georgia, Times, 'Times New Roman', serif;
   background: transparent url(bluebg.gif) repeat-x;
+  width: 98%;
 }
 .slide h1 {position: absolute; left: 87px; z-index: 1;
  white-space: nowrap;
@@ -53,6 +54,7 @@ div.long {font-size: 0.75em;}
  margin: 0 auto; text-align: center; padding: 0;
  font: 150%/1em georgia, Times, 'Times New Roman', serif;
  color: #fff; background: transparent;
+ margin-left: 0.15em;
  }
 .slide h3 {font-size: 130%;}
 h1 abbr {font-variant: small-caps;}
@@ -72,7 +74,7 @@ div#controls form {position: absolute; bottom: 0; right: 0; width: 100%;
 
 #currentSlide {text-align: center; font-size: 0.5em; color: #9183BF; font-family: Verdana, Helvetica, sans-serif;}
 
-#slide0 {padding-top: 3.5em; font-size: 90%; margin-left: -1em;}
+#slide0 {padding-top: 3.5em; font-size: 90%; }
 #slide0 h1 {position: static; margin: 1em 0 1.33em; padding: 0;
    white-space: normal;
    background: transparent;
